--- a/BDDFramework/pom.xml
+++ b/BDDFramework/pom.xml
@@ -40,13 +40,13 @@
 			<version>1.2.5</version>
 			<!-- <scope>test</scope> -->
 		</dependency>
-<!-- 		<dependency>
+		<dependency>
 			<groupId>com.sun</groupId>
 			<artifactId>tools</artifactId>
 			<version>1.6</version>
 			<scope>system</scope>
 			<systemPath>C:\Program Files\Java\jdk1.8.0_201\lib\tools.jar</systemPath>
-		</dependency> -->
+		</dependency>
 
 		<dependency>
 			<groupId>info.cukes</groupId>
@@ -146,6 +146,25 @@
 		</dependency>
 
 
+<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>4.2.0</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml</groupId>
+			<artifactId>jackson-xml-databind</artifactId>
+			<version>0.6.2</version>
+		</dependency>
 
 	</dependencies>
 
