--- a/BDDFramework/pom.xml
+++ b/BDDFramework/pom.xml
@@ -40,13 +40,13 @@
 			<version>1.2.5</version>
 			<!-- <scope>test</scope> -->
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.sun</groupId>
 			<artifactId>tools</artifactId>
 			<version>1.6</version>
 			<scope>system</scope>
 			<systemPath>C:\Program Files\Java\jdk1.8.0_201\lib\tools.jar</systemPath>
-		</dependency>
+		</dependency> -->
 
 		<dependency>
 			<groupId>info.cukes</groupId>
